--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="container">
         <div class="card-deck">
-            <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #FFD5D5;">
+            <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #fafafa;">
                 <img src="./assets/icons/icons8-stethoscope-150.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">What We Do</h5>
@@ -69,7 +69,7 @@
                     <a class="btn btn-danger btn-lg" href="#" role="button">Learn More</a>
                 </div>
             </div>
-            <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #FFAAAA;">
+            <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #fafafa;">
                 <img src="./assets/icons/icons8-ringing-phone-150.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Make An Appointment</h5>
@@ -80,7 +80,7 @@
                     </p>
                 </div>
             </div>
-            <div class="card shadow-lg p-3 mb-5 rounded" style="background-color:#FF8080;">
+            <div class="card shadow-lg p-3 mb-5 rounded" style="background-color:#fafafa;">
                 <img src="./assets/icons/icons8-clock-384.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Opening Hours</h5>
@@ -93,14 +93,7 @@
             </div>
         </div>
     </div>
-
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1 class="display-4">Where We're Located</h1>
-            <p class="lead"></p>
-        </div>
-    </div>
-
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
