--- a/index.html
+++ b/index.html
@@ -12,38 +12,43 @@
     <link rel="stylesheet" type="text/css" href="./css/fonts.css">
 
     <title>EGY BRIT</title>
+
+    <script src="./js/navbar.js" data-rel-js></script>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" id="navbar">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="./assets/images/logo.png" width="175" height="85" alt="EGY BRIT">
-            </a>
+    <div class="visible-md" style="height:40px;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top" id="navbar">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="./assets/images/logo.png" width="175" height="85" alt="EGY BRIT">
+                </a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto navbar-right">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto navbar-right">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </div>
 
     <div class="jumbotron cover-page">
         <div class="container jumbotron-content">
@@ -75,8 +80,8 @@
                     <h5 class="card-title">Make An Appointment</h5>
                     <p class="card-text">To make an appointment either call us at our medical hotline or send us an
                         email.<br>
-                        <br>Call Us: <span class="badge badge-danger">(+2) 01099333370</span>
-                        <br>Email Us: <span class="badge badge-danger">egybrit@egybrit.net</span>
+                        <br>Call Us: <strong>(+2) 01099333370</strong>
+                        <br>Email Us: <strong>egybrit@egybrit.net</strong>
                     </p>
                 </div>
             </div>
@@ -93,7 +98,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
