Fixed navbar bug

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/299e4b8f4c.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" type="text/css" href="./css/navbar.css">
     <link rel="stylesheet" type="text/css" href="./css/home.css">
     <link rel="stylesheet" type="text/css" href="./css/fonts.css">
+    <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
 
     <title>EGY BRIT</title>
 
@@ -66,8 +68,7 @@
                 <div class="card-body">
                     <h5 class="card-title">What We Do</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                        incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore</p>
+                        incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                     <a class="btn btn-danger btn-lg" href="#" role="button">Learn More</a>
                 </div>
             </div>
@@ -77,8 +78,10 @@
                     <h5 class="card-title">Make An Appointment</h5>
                     <p class="card-text">To make an appointment either call us at our medical hotline or send us an
                         email.<br>
-                        <br>Call Us: <strong>(+2) 01099333370</strong>
-                        <br>Email Us: <strong>egybrit@egybrit.net</strong>
+                        <br><i class="fas fa-mobile-alt"></i> <strong>(+2) 011557761111</strong>
+                        <br><i class="fas fa-mobile-alt"></i> <strong>(+2) 26910605</strong>
+                        <br><i class="fas fa-phone-alt"> </i> <strong>(+2) 01099333370</strong>
+                        <br><i class="fas fa-envelope"> </i> <strong>egybrit@egybrit.net</strong>
                     </p>
                 </div>
             </div>
@@ -86,11 +89,61 @@
                 <img src="./assets/icons/icons8-clock-384.png" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Opening Hours</h5>
-                    <p class="card-text">We are open every day from X to X with the exception of some holidays.<br>
-                        <br>Sunday - Saturday
+                    <p class="card-text">Sunday - Saturday
                         <br>8:00 AM - 10:00 PM
+                        <br>
+                        <br><i class="fas fa-map-signs"></i> 4th Floor, 18 Thawra St., QNB Building, Helopolis, Cairo,
+                        Egypt.
                     </p>
                     <a class="btn btn-danger btn-lg" href="#" role="button">Learn More</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-4" style="padding-bottom: 2%;">Our Doctors</h1>
+
+            <div class="row row-cols-1 row-cols-md-3">
+                <div class="col mb-4">
+                    <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a short card.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col mb-4">
+                    <div class="card h-100">
+                        <img src="..." class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
+                                to additional content. This content is a little bit longer.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
