"Our Doctors" Page & Navbar Fix

--- a/index.html
+++ b/index.html
@@ -19,37 +19,38 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm fixed-top navbar-light" id="navbar">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="./assets/images/logo.png" width="175" height="85" alt="EGY BRIT">
-            </a>
+    <div class="cover-page">
+        <nav class="navbar navbar-expand-sm navbar-light" id="navbar">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="./assets/images/logo.png" width="175" height="85" alt="EGY BRIT">
+                </a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto navbar-right">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
-                    </li>
-                </ul>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto navbar-right">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
 
-    <div class="jumbotron cover-page">
         <div class="container jumbotron-content">
             <h1 class="display-4 jumbotron-title">Egyptian British<br>Medical Centre</h1>
             <p class="lead jumbotron-body">
@@ -59,89 +60,131 @@
                 <a class="btn btn-danger btn-lg" href="#" role="button">Learn more</a>
             </p>
         </div>
-    </div>
 
-    <div class="container">
-        <div class="card-deck">
-            <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #fafafa;">
-                <img src="./assets/icons/icons8-stethoscope-150.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">What We Do</h5>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                        incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit</p>
-                    <a class="btn btn-danger btn-lg" href="#" role="button">Learn More</a>
+        <div class="container description-cards">
+            <div class="card-deck">
+                <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #fafafa;">
+                    <img src="./assets/icons/icons8-stethoscope-150.png" class="card-img-top-2" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">What We Do</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                            tempor
+                            incididunt ut laboreLorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                        <a class="btn btn-danger btn-lg" href="#" role="button">Learn More</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #fafafa;">
-                <img src="./assets/icons/icons8-ringing-phone-150.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Make An Appointment</h5>
-                    <p class="card-text">To make an appointment either call us at our medical hotline or send us an
-                        email.<br>
-                        <br><i class="fas fa-mobile-alt"></i> <strong>(+2) 011557761111</strong>
-                        <br><i class="fas fa-mobile-alt"></i> <strong>(+2) 26910605</strong>
-                        <br><i class="fas fa-phone-alt"> </i> <strong>(+2) 01099333370</strong>
-                        <br><i class="fas fa-envelope"> </i> <strong>egybrit@egybrit.net</strong>
-                    </p>
+                <div class="card shadow-lg p-3 mb-5 rounded" style="background-color: #fafafa;">
+                    <img src="./assets/icons/icons8-ringing-phone-150.png" class="card-img-top-2" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Make An Appointment</h5>
+                        <p class="card-text">To make an appointment either call us at our medical hotline or send us an
+                            email.<br>
+                            <br><i class="fas fa-mobile-alt"></i> <strong>(+2) 011557761111</strong>
+                            <br><i class="fas fa-mobile-alt"></i> <strong>(+2) 26910605</strong>
+                            <br><i class="fas fa-phone-alt"> </i> <strong>(+2) 01099333370</strong>
+                            <br><i class="fas fa-envelope"> </i> <strong>egybrit@egybrit.net</strong>
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="card shadow-lg p-3 mb-5 rounded" style="background-color:#fafafa;">
-                <img src="./assets/icons/icons8-clock-384.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Opening Hours</h5>
-                    <p class="card-text">Sunday - Saturday
-                        <br>8:00 AM - 10:00 PM
-                        <br>
-                        <br><i class="fas fa-map-signs"></i> 4th Floor, 18 Thawra St., QNB Building, Helopolis, Cairo,
-                        Egypt.
-                    </p>
-                    <a class="btn btn-danger btn-lg" href="#" role="button">Learn More</a>
+                <div class="card shadow-lg p-3 mb-5 rounded" style="background-color:#fafafa;">
+                    <img src="./assets/icons/icons8-clock-384.png" class="card-img-top-2" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Opening Hours</h5>
+                        <p class="card-text">Sunday - Saturday
+                            <br>8:00 AM - 10:00 PM
+                            <br>
+                            <br><i class="fas fa-map-signs"></i> 4th Floor, 18 Thawra St., QNB Building, Helopolis,
+                            Cairo,
+                            Egypt.
+                        </p>
+                        <a class="btn btn-danger btn-lg" href="#" role="button">Learn More</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="jumbotron">
+    <div class="jumbotron doctors-background">
         <div class="container">
-            <h1 class="display-4" style="padding-bottom: 2%;">Our Doctors</h1>
-
-            <div class="row row-cols-1 row-cols-md-3">
-                <div class="col mb-4">
-                    <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+            <h1 class="display-4 jumbotron-title" style="padding-bottom: 2%;">Our Doctors</h1>
+            <div class="card-group">
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png"
+                            class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
                 </div>
-                <div class="col mb-4">
-                    <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png"
+                            class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a short card.</p>
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
                 </div>
-                <div class="col mb-4">
-                    <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png"
+                            class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content.</p>
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
                 </div>
-                <div class="col mb-4">
-                    <div class="card h-100">
-                        <img src="..." class="card-img-top" alt="...">
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png"
+                            class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in
-                                to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png"
+                            class="card-img-top doctor-image" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png"
+                            class="card-img-top doctor-image" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png"
+                            class="card-img-top doctor-image" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="doctors-col col mb-4">
+                    <div class="card h-70 shadow-sm p-3 mb-5 bg-white rounded">
+                        <img src="./assets/images/avatar.png"
+                            class="card-img-top doctor-image" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Full Name</h5>
+                            <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
                 </div>
