--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <img src="./assets/images/avatar.png"
                             class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
+                            <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                         <img src="./assets/images/avatar.png"
                             class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
+                            <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                         <img src="./assets/images/avatar.png"
                             class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
+                            <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                         <img src="./assets/images/avatar.png"
                             class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
+                            <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -153,7 +153,7 @@
                         <img src="./assets/images/avatar.png"
                             class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
+                            <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                         <img src="./assets/images/avatar.png"
                             class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
+                            <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -173,7 +173,7 @@
                         <img src="./assets/images/avatar.png"
                             class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
+                            <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                         <img src="./assets/images/avatar.png"
                             class="card-img-top doctor-image" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Full Name</h5>
+                            <h5 class="card-title">Dr. Full Name</h5>
                             <p class="card-text"><small class="text-muted">Job Name</small></p>
                         </div>
                     </div>
@@ -191,6 +191,29 @@
             </div>
         </div>
     </div>
+
+
+    <footer class="container py-5" style="margin-bottom: -1.5%; margin-top: -1.5%;">
+        <div class="row">
+          <div class="col-md footer-content">
+            <img src="assets/images/logo.png" class="footer-image">
+          </div>
+          <div class="col-md">
+            <h5>Navigation</h5>
+            <ul class="list-unstyled text-small">
+              <li><a class="text-muted" href="#">Home</a></li>
+              <li><a class="text-muted" href="#">Services</a></li>
+              <li><a class="text-muted" href="#">About</a></li>
+              <li><a class="text-muted" href="#">Contact Us</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
+    
+      <div class="footerfooter" style="text-align: center; background-color: #f5f5f5;">
+        <span class="text-muted">Copyright &copy; 2020 All Rights Reserved</span>
+      </div>
+    
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
